--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ html {
     padding: 0;
     height: 100%;
     box-sizing: border-box;
+    background-color: rgb(134, 227, 250);
 }
 
 *,
@@ -13,5 +14,5 @@ html {
 }
 
 table, th, td {
-  border: 1px solid rgba(6, 131, 153, 0.774);
+  border: 1px solid rgb(3, 98, 105);
 }
