--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,23 @@ html {
 table, th, td {
   border: 1px solid rgb(3, 98, 105);
 }
+
+
+
+ a:hover {
+  background-color: rgb(19, 187, 199);
+}
+
+a:visited {
+  color: rgb(1, 78, 114);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: #d5f0f7da;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+
